# SAbot-an-LLM-RAG-Assistant

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  results_df.xlsx
.devcontainer/: devcontainer.json
.github/workflows/: deploy.yml
SA_Bot/.streamlit/: config.toml
SA_Bot/evaluation/: Selection_Test.ipynb  similarity_test.ipynb  temperature.py  textsplitter_test.py
SA_Bot/sabot/: SAbot.py  Visual.py
