[tool.poetry]
name = "sabot-project"
version = "1.0.1"
description = "SAbot Assistant with Streamlit"
authors = ["Yes"]
license = "Sandeep Pandey"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11.9,<4.0"
openai = "^1.30.4"
torch = "^2.3.0"
transformers = "^4.41.1"
python-dotenv = "^1.0.1"
numpy = "^1.26.4"
streamlit = "^1.35.0"
faiss-cpu = "^1.8.0"
langchain-community = "^0.2.1"
sentence-transformers = "^2.2.2"
pypdf = "^3.3.0"  # Add this line

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
